# pixel-war.rs

./: .gitignore  LICENSE  README.md  build.sh  docker-compose.yml
backend/: Cargo.toml  README.md  config.toml.example
backend/src/: config.rs  main.rs
backend/src/routes/: admin.rs  canva.rs  mod.rs  pixel.rs  state.rs
backend/src/utils/: requests.rs
backend/state/: generatePasswrod.rs
frontend/: README.md  bootstrapModule.ts  package.json  pnpm-lock.yaml  react-router.config.ts  vite.config.ts
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/routes/: _index.tsx  home.tsx
frontend/app/routes/admin/: route.tsx
frontend/app/routes/admin-control/: route.tsx
frontend/app/routes/pixelwar/: route.tsx
frontend/app/routes/spectate/: route.tsx
frontend/components/: boostrapClient.tsx
frontend/components/BottomToolbar/: index.tsx
frontend/components/Button/: index.tsx
frontend/components/Button/Color/: index.tsx
frontend/components/CanvaPixelWar/: index.tsx
frontend/components/Input/: index.tsx
frontend/components/Slider/: index.tsx
frontend/components/admin/adminCanva/: index.tsx
frontend/components/admin/adminChangeActive/: index.tsx
frontend/components/admin/adminDelay/: index.tsx
frontend/components/admin/adminNewSize/: index.tsx
frontend/components/admin/adminResetCanva/: index.tsx
frontend/components/header/: burgerMenu.tsx  header.tsx  navbar.tsx  navbarLinks.tsx
frontend/public/downloads/automate_pixel_src/: README.md  pixel_writing.py
frontend/utils/: canvaHelpers.ts  computeInitialScale.ts  updateCanva.ts
